--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -2,4 +2,15 @@
 .carousel-control-next:hover {
   background-color: rgba(0, 0, 0, 0.5);
 }
+.car_mob {
+  margin-left: 40%;
+  width: 60%;
+}
+
+@media (max-width: 670px) {
+  .car_mob {
+    width: 80%;
+    margin-left: 10%;
+  }
+}
 /* background-color: rgba(255, 255, 255, 0.5); */
